# TreePIR

./: LICENSE  README.md
CSA/src/: CSA.java  MerkleTrees.java
CSA/xenon2024/: README.md  xenon2024_log_entries
Evaluation/Data/: Total_Cost.communication
PBC/: CMakeLists.txt
PBC/client_log/: pbc_indexing_22_2_log.txt  pbc_indexing_24_2_log.txt
PBC/header/: batchpirclient.h  batchpirparams.h  batchpirserver.h  database_constants.h  pirparams.h  server.h
PBC/maps/: map_10_2.JSON
PBC/src/: batchpirclient.cpp  batchpirparams.cpp  batchpirserver.cpp  client.cpp  main.cpp  main_client.h  main_server.h  pirparams.cpp  server.cpp  utils.h
PBC/treedata/: WholeTree_10_2.JSON
SealPIR-Orchestrator/: list_servers_IPs.txt  orchestrator.py
SealPIRplus/: CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  helper.cpp  helper.hpp  pir.cpp  pir.hpp  pir_client.cpp  pir_client.hpp  pir_server.cpp  pir_server.hpp  pirmessage_client.cpp  pirmessage_server.cpp  safequeue.hpp  servers_list.txt
SealPIRplus/proto/: CMakeLists.txt  Setup protobuf  pirmessage.grpc.pb.cc  pirmessage.grpc.pb.h  pirmessage.pb.cc  pirmessage.pb.h  pirmessage.proto
Spiral/: CMakeLists.txt  Dockerfile  docker-bake.hcl
Spiral/Client/: CMakeLists.txt  Dockerfile  README.md
Spiral/Client/include/: poly.h  spiral.h
Spiral/Client/src/: spiral.cpp  testing.cpp
Spiral/Database/Colouring/Data/: MetaParser.py  colorA_10_2.json  colorA_12_2.json  colorA_14_2.json  colorA_16_2.json  colorA_18_2.json  colorB_12_2.json  colorB_14_2.json  colorB_16_2.json  colorB_18_2.json  colorC_10_2.json  colorC_12_2.json  colorC_14_2.json  colorC_16_2.json  colorC_18_2.json  colorD_12_2.json  colorD_14_2.json  colorD_16_2.json  colorD_18_2.json  colorE_12_2.json  colorE_14_2.json  colorE_16_2.json  colorE_18_2.json  colorF_10_2.json  colorF_12_2.json  colorF_14_2.json  colorF_16_2.json  colorF_18_2.json  colorG_10_2.json  colorG_12_2.json  colorG_14_2.json  colorG_16_2.json  colorG_18_2.json  colorH_12_2.json  colorH_14_2.json  colorH_16_2.json  colorH_18_2.json  colorI_12_2.json  colorI_14_2.json  colorI_16_2.json  (+25 more)
Spiral/Database/Colouring/Indices/: color_indices_10_2.txt  color_indices_12_2.txt  color_indices_14_2.txt  color_indices_16_2.txt  color_indices_18_2.txt  color_indices_20_2.txt
Spiral/Database/Development/: REPETITONS  repeated_chars.py
Spiral/Database/PBC/Data/: META  PBC10_10_2.json  PBC10_12_2.json  PBC10_14_2.json  PBC10_16_2.json  PBC11_10_2.json  PBC11_12_2.json  PBC11_14_2.json  PBC11_16_2.json  PBC12_10_2.json  PBC12_12_2.json  PBC12_14_2.json  PBC12_16_2.json  PBC13_10_2.json  PBC13_12_2.json  PBC13_14_2.json  PBC13_16_2.json  PBC14_10_2.json  PBC14_12_2.json  PBC14_14_2.json  PBC14_16_2.json  PBC15_10_2.json  PBC15_12_2.json  PBC15_14_2.json  PBC15_16_2.json  PBC16_12_2.json  PBC16_14_2.json  PBC16_16_2.json  PBC17_12_2.json  PBC17_14_2.json  PBC17_16_2.json  PBC18_12_2.json  PBC18_14_2.json  PBC18_16_2.json  PBC19_14_2.json  PBC19_16_2.json  PBC1_10_2.json  PBC1_12_2.json  PBC1_14_2.json  PBC1_16_2.json  (+40 more)
Spiral/Database/PBC/Indices/: indices_10_2.txt  indices_12_2.txt  indices_14_2.txt  indices_16_2.txt  indices_18_2.txt  indices_20_2.txt
Spiral/Documents/Configuration/: 15_32.config  8_32.config
Spiral/Documents/Configuration (copy)/: 10_32.config  11_32.config  12_32.config  13_32.config  14_32.config  15_32.config  16_32.config  17_32.config  18_32.config  19_32.config  1_32.config  20_32.config  21_32.config  22_32.config  23_32.config  24_32.config  25_32.config  26_32.config  27_32.config  28_32.config  29_32.config  2_32.config  30_32.config  3_32.config  4_32.config  5_32.config  6_32.config  7_32.config  8_32.config  9_32.config
Spiral/Evaluation/: evaluate.py
Spiral/Evaluation/Latex_Tables/: Answer_time_per_query.tex
Spiral/PIR_Server/: CMakeLists.txt  Dockerfile
Spiral/PIR_Server/include/: client.h  spiral.h  values.h
Spiral/PIR_Server/src/: spiral.cpp
Spiral/Process_Workspace/: Notes.txt
Spiral/Seperated/: CMakeLists.txt  run_all.py  select_params.py
Spiral/Seperated/include/: spiral.h  values.h
Spiral/Seperated/src/: client.cpp  poly.cpp  spiral.cpp
TreePIR-Indexing/src/: SubCSA.java
VBPIR_PBC/: CMakeLists.txt
VBPIR_PBC/header/: batchpirserver.h  database_constants.h
VBPIR_PBC/src/: batchpirclient.cpp  batchpirparams.cpp  batchpirserver.cpp  client.cpp  main.cpp  utils.h
VBPIR_PBC/treedata/: WholeTree_10_2.json
VBPIR_TreePIR/: CMakeLists.txt  list_TXs_10_2.txt
VBPIR_TreePIR/colorSubDB/: colorA_10_2.json  colorB_10_2.json  colorD_10_2.json  colorE_10_2.json  colorH_10_2.json  colorI_10_2.json  colorJ_10_2.json
VBPIR_TreePIR/header/: batchpirclient.h  batchpirparams.h  batchpirserver.h  database_constants.h
VBPIR_TreePIR/src/: batchpirclient.cpp  batchpirparams.cpp  batchpirserver.cpp  client.cpp  main.cpp  pirparams.cpp  server.cpp  utils.h
VBPIR_TreePIR/subIndices/: color_indices_10_2.txt
