cmake_minimum_required(VERSION 3.12)

project(Server VERSION 0.1 LANGUAGES CXX)
set(SRC_FILES src/spiral.cpp src/core.cpp src/constants.cpp src/poly.cpp src/util.cpp src/client.cpp src/testing.cpp)
set(HEADER_FILES include/spiral.h include/core.h include/constants.h include/poly.h include/util.h include/client.h include/testing.h)
add_executable(Server ${SRC_FILES} ${HEADER_FILES})
target_include_directories(Server PUBLIC include)
target_include_directories(Server PUBLIC /home/ubuntu/vcpkg/installed/)
target_link_libraries(Server PRIVATE HEXL::hexl)
target_link_libraries(Server PRIVATE nlohmann_json::nlohmann_json)
target_link_libraries(Server PRIVATE Boost::boost)
target_link_libraries(Server PRIVATE simdjson::simdjson)

add_compile_definitions(
    TEXP=$(TEXP)
    TEXPRIGHT=$(TEXPRIGHT)
    TCONV=$(TCONV)
    TGSW=$(TGSW)
    QPBITS=$(QPBITS)
    PVALUE=$(PVALUE)
    QNUMFIRST=$(QNUMFIRST)
    QNUMREST=$(QNUMREST)
    OUTN=$(OUTN)
)